<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/purple_500"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="6dp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="6dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/nav_header_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar" />

    </com.google.android.material.card.MaterialCardView>

    <!-- Используем понятные id, которые можно найти в коде -->
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name_template"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUserGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_template"
        android:textColor="@color/white" />

</LinearLayout>